--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
+date.timezone UTC
+
 ############################################
 ## uncomment these lines for CGI mode
 ## make sure to specify the correct cgi php binary file name
